--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,27 +1,84 @@
-<header id="header" class="header-scroll top-header headrom">
-            <nav class="navbar navbar-dark">
-                <div class="container">
-                    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#mainNavbarCollapse">&#9776;</button>
-                    <a class="navbar-brand" href="index.php"> <img class="img-rounded" src="images/icn.png" alt=""> </a>
-                    <div class="collapse navbar-toggleable-md  float-lg-right" id="mainNavbarCollapse">
-                        <ul class="nav navbar-nav">
-                            <li class="nav-item"> <a class="nav-link active" href="index.php">Home <span class="sr-only">(current)</span></a> </li>
-                            <li class="nav-item"> <a class="nav-link active" href="menu.php">Menu <span class="sr-only"></span></a> </li>
-                            <li class="nav-item"> <a class="nav-link active" href="cart.php">Cart <span class="sr-only"></span></a> </li>
-                            {% if user_id is empty %}
-                                <li class="nav-item"><a href="login.php" class="nav-link active">Login</a></li>
-                                <li class="nav-item"><a href="registration.php" class="nav-link active">Register</a></li>
-                            {% else %}
-                                <li class="nav-item"><a href="your_orders.php" class="nav-link active">My Orders</a></li>
-                                <li class="nav-item"><a href="logout.php" class="nav-link active">Logout</a></li>
-                            {% endif %}
+<div class="header">
+            <nav class="navbar top-navbar navbar-expand-md navbar-light">
+            <div class="navbar-header">
+                    <a class="navbar-brand" href="dashboard.php">
+                        
+                        <span><img src="images/icn.png" alt="homepage" class="dark-logo" /></span>
+                    </a>
+                </div>
+                <div class="navbar-collapse">
+       
+                    <ul class="navbar-nav mr-auto mt-md-0">
+              
+                        
+                     
+                       
+                    </ul>
+          
+                    <ul class="navbar-nav my-lg-0">
+
+                        
+          
+                        <li class="nav-item dropdown">
                            
-							 
-                        </ul>
-						 
-                    </div>
+                            <div class="dropdown-menu dropdown-menu-right mailbox animated zoomIn">
+                                <ul>
+                                    <li>
+                                        <div class="drop-title">Notifications</div>
+                                    </li>
+                                    
+                                    <li>
+                                        <a class="nav-link text-center" href="javascript:void(0);"> <strong>Check all notifications</strong> <i class="fa fa-angle-right"></i> </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                  
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-muted  " href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="images/bookingSystem/user-icn.png" alt="user" class="profile-pic" /></a>
+                            <div class="dropdown-menu dropdown-menu-right animated zoomIn">
+                                <ul class="dropdown-user">
+                                   <li><a href="logout.php"><i class="fa fa-power-off"></i> Logout</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </nav>
-
-        </header>
+        </div>
+     
+        <div class="left-sidebar">
+     
+            <div class="scroll-sidebar">
+               
+                <nav class="sidebar-nav">
+                    <ul id="sidebarnav">
+                        <li class="nav-devider"></li>
+                        <li class="nav-label">Home</li>
+                        <li> <a href="dashboard.php"><i class="fa fa-tachometer"></i><span>Dashboard</span></a></li>
+                        <li class="nav-label">Log</li>
+                        <li> <a href="all_users.php">  <span><i class="fa fa-user f-s-20 "></i></span><span>Users</span></a></li>
+                        <li> <a class="has-arrow  " href="#" aria-expanded="false"><i class="fa fa-archive f-s-20 color-warning"></i><span class="hide-menu">Restaurant</span></a>
+                            <ul aria-expanded="false" class="collapse">
+								<li><a href="all_restaurant.php">All Restaurants</a></li>
+								<li><a href="add_category.php">Add Category</a></li>
+                                <li><a href="add_restaurant.php">Add Restaurant</a></li>
+                                
+                            </ul>
+                        </li>
+                      <li> <a class="has-arrow  " href="#" aria-expanded="false"><i class="fa fa-cutlery" aria-hidden="true"></i><span class="hide-menu">Menu</span></a>
+                            <ul aria-expanded="false" class="collapse">
+								<li><a href="all_menu.php">All Menues</a></li>
+								<li><a href="add_menu.php">Add Menu</a></li>
+                              
+                                
+                            </ul>
+                        </li>
+						 <li> <a href="all_orders.php"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>Orders</span></a></li>
+                         
+                    </ul>
+                </nav>
+            
+            </div>
         
+        </div>
