--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,167 +1,38 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">   
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="#">
-    <title>Home</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/animsition.min.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-</head>
-<body class="home">
+    <head>
+          <meta charset="UTF-8">
+  <title>Admin Login</title>
+  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
-    
+    <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900'>
+    <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Montserrat:400,700'>
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
-    
-        {% include 'header.html.twig' %}
+    <link rel="stylesheet" href="css/login.css">
 
-        <section class="hero bg-image" data-image-src="images/img/pimg.jpg">
-            <div class="hero-inner">
-                <div class="container text-center hero-text font-white">
-                    <h1>Order Delivery </h1>
-                    
-                    <div class="banner-form">
-                        <form class="form-inline">
-                          
-                        </form>
-                    </div>
-                    <div class="steps">
-                        <div class="step-item step1">
-                            <h4><span style="color:white;">1. </span>Choose Restaurant</h4>
-                        </div>
-                        <div class="step-item step2">
-                            <h4><span style="color:white;">2. </span>Order Food</h4>
-                        </div>
-                        <div class="step-item step3">
-                            <h4><span style="color:white;">3. </span>Delivery</h4>
-                        </div>
-                    </div>
-             
-                </div>
-            </div>
-      
-        </section>
-      
-      
-	  
-	
-     
-        <section class="popular">
-            <div class="container">
-                <div class="title text-xs-center m-b-30">
-                    <h2>Popular Dishes of the Month</h2>
-                    <p class="lead">Easiest way to order your favourite food among these top 6 dishes</p>
-                </div>
-                <div class="row">
-                    {% for dish in dishes %}
-                        <div class="col-xs-12 col-sm-6 col-md-4 food-item">
-                            <div class="food-item-wrap">
-                                <div class="figure-wrap bg-image" data-image-src="admin/Res_img/dishes/{{ dish.img }}"></div>
-                                <div class="content">
-                                    <h5><a href="dishes.php?res_id={{ dish.rs_id }}">{{ dish.title }}</a></h5>
-                                    <div class="product-name">{{ dish.slogan }}</div>
-                                    <div class="price-btn-block"> 
-                                        <span class="price">${{ dish.price }}</span> 
-                                        <a href="dishes.php?res_id={{ dish.rs_id }}" class="btn theme-btn-dash pull-right">Order Now</a> 
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </section>
- 
-        <section class="how-it-works">
-            <div class="container">
-                <div class="text-xs-center">
-                <h2>
-                    Welcome to Our Website
-                </h2>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <p class="pay-info">Cash on Delivery</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="featured-restaurants">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="title-block pull-left">
-                            <h4>Featured Restaurants</h4> </div>
-                    </div>
-                    <div class="col-sm-8">
-                        <div class="restaurants-filter pull-right">
-                            <nav class="primary pull-left">
-                                <ul>
-                                    <li><a href="#" class="selected" data-filter="*">all</a> </li>
-                                    {% for category in categories %}
-                                        <li><a href="#" data-filter=".{{ category }}"> {{ category }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                            </nav>
-                        </div>
-          
-                    </div>
-                </div>
-    
-                <div class="row">
-                    <div class="restaurant-listing">
-                        {% for restaurant in restaurants %}
-                            <div class="col-xs-12 col-sm-12 col-md-6 single-restaurant all {{ restaurant.category_name }}">
-                                <div class="restaurant-wrap">
-                                    <div class="row">
-                                        <div class="col-xs-12 col-sm-3 col-md-12 col-lg-3 text-xs-center">
-                                            <a class="restaurant-logo" href="dishes.php?res_id={{ restaurant.restaurant_id }}"> 
-                                                <img src="{{ restaurant.restaurant_logo }}" alt="Restaurant logo"> 
-                                            </a>
-                                        </div>
+  
+    </head>
+    <body>
+    <div class="container">
+    <div class="info">
+        <h1>Admin Panel </h1>
+    </div>
+    </div>
+    <div class="form">
+        <div class="thumbnail"><img src="images/manager.png"/></div>
+            {% if error %}
+                <span style="color:red;">{{ error }}</span>
+            {% endif %}
 
-                                        <div class="col-xs-12 col-sm-9 col-md-12 col-lg-9">
-                                            <h5><a href="dishes.php?res_id={{ restaurant.restaurant_id }}">{{ restaurant.title }}</a></h5> 
-                                            <span>{{ restaurant.address }}</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endfor %}
-
-						
-						
-							
-						
-					
-                    </div>
-                </div>
-     
-               
-            </div>
-        </section>
-        
-      
-        {% include 'footer.html.twig' %}
-
-    
-    
-    <script src="js/weather.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/tether.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/animsition.min.js"></script>
-    <script src="js/bootstrap-slider.min.js"></script>
-    <script src="js/jquery.isotope.min.js"></script>
-    <script src="js/headroom.js"></script>
-    <script src="js/foodpicky.min.js"></script>
-
-</body>
+            <form class="login-form" action="index.php" method="post">
+                <input type="text" placeholder="Username" name="username"/>
+                <input type="password" placeholder="Password" name="password"/>
+                <input type="submit"  name="submit" value="Login" />
+            </form>
+    </div>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='js/index.js'></script>
+    </body>
 </html>
